[project]
name = "chargax"
version = "0.2.0"
description = "A JAX Accelerated EV Charging Simulator"
readme = "README.md"
authors = [
    { name = "Koen Ponse", email = "k.ponse@liacs.leidenuniv.nl" }
]
requires-python = ">=3.10"
dependencies = ['jymkit[algs]>=0.0.9', 'jax[cuda]==0.5.2']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F722", "E731"] 

[tool.ruff.lint.isort]
combine-as-imports = true